--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
         "pip-services3-commons-node": "^3.0.0",
         "pip-services3-components-node": "^3.0.0",
         "pip-services3-container-node": "^3.0.0",
-        "pip-services3-data-node": "^3.0.0",
-        "pip-services3-mongodb-node": "^3.2.3",
         "pip-services3-rpc-node": "^3.0.0"
     },
     "devDependencies": {
@@ -49,11 +47,10 @@
         "@types/chai": "*",
         "@types/lodash": "^4.14.145",
         "@types/mocha": "*",
-        "@types/mongodb": "^2.1.38",
         "@types/node": "^12.12.6",
         "chai": "*",
-        "mocha": "*", 
+        "mocha": "*",
         "restify": "^4.3.0",
-        "pip-services-metrics-node": "git+ssh://git@github.com:pip-services-infrastructure/pip-services-metrics-node.git"
+        "pip-services-metrics-node": "^1.0.0"
     }
 }
